# kyocera-printer-monitor

./: Cargo.toml  Cross.toml  LICENSE.md  README.md  crossbuild.ps1  demo.js
.github/workflows/: build.yml
src/: check_one_printer.rs  http.rs  js.rs  js_hijack_after.js  js_hijack_before.js  json_utils.rs  main.rs  remember.rs  static.rs  status.rs  update.rs
