[package]
name = "kyocera-printer-monitor"
version = "1.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82" # error handling
arboard = { version = "3.3.2", default-features = false } # clipboard
directories = "5.0.1" # get directory to store printers in
indicatif = "0.17.8" # progress bar
kg-js = "0.9.0" # core JS engine
phf = { version = "0.11.2", features = ["macros"] } # static hashmap

reqwest = { version = "0.12.4", features = ['native-tls-vendored'] } # actual requests to printers
# disables openssl, enabled rustls
# , default-features = false, features = ['rustls-tls', 'http2', 'charset'] }
semver = "1.0.22" # parse current and latest versions
serde_json = "1.0.116" # handle json
tokio = { version = "1.37.0", features = ["full"] } # async runtime
